Ugly logging to allow standalone compile w/o dependency libraries